<resources>
    <string name="app_name">Knome</string>
    <string name="signup_info">No account yet?</string>
    <string name="signup_link">Create one</string>
    <string name="signin_using">Sign in using :</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="type_here">Type here.....</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signing_up">Signing-up</string>
    <string name="loading">Loading</string>
    <string name="location_text">"Latitude: %1$.4f \n Longitude: %2$.4f
    \n Timestamp: %3$tr"</string>
    <string name="no_location">No location detected</string>
    <string name="service_not_avail">Service not available</string>
    <string name="invalid_lat_long">Invalid latitude and longitude</string>
    <string name="no_string_found">No string found</string>
    <string name="address_text">"Address: %1$s \n Timestamp: %2$tr"</string>
    <string name="facebook_app_id">565723447296716</string>
    <string name="fb_login_protocol_scheme">fb565723447296716</string>
</resources>
